[tool.poetry]
name = "transparent-textures"
version = "0.1.0"
description = ""
authors = ["Michael Hearn <git@mikehearn.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
pelican = "=3.3"
beautifulsoup4 = "^4.6"
markdown = "2.4"

[tool.poetry.dev-dependencies]
black = "18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
